# mcp-server-uuid

./: pyproject.toml
src/mcp_server_uuid/: __init__.py  server.py
